--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
   </head>
-  <body class="normal-transition min-width-1519 bg-bodyBg dark:bg-bodyDarkBg">
+  <body class="normal-transition min-width-1536 overflow-x-hidden bg-bodyBg dark:bg-bodyDarkBg">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
